<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_view"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_1"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:inputType="textPersonName"
        android:fontFamily="monospace"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_Nombre"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Nombre"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_2"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:fontFamily="monospace"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_Tel"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Tel"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_3"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="352dp"
        android:fontFamily="monospace"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_Email"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Email"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_4"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="440dp"
        android:fontFamily="monospace"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_Descr"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_Descr"
            android:inputType="textPersonName"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/txt_view"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txt_Feche"
        android:layout_width="227dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/txt_Fecha"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_1" />


    <ImageButton
        android:id="@+id/but_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/but_cal"
        android:onClick="Calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/txt_Feche"
        app:layout_constraintTop_toBottomOf="@+id/text_1"
        app:srcCompat="@android:drawable/ic_menu_today" />

    <Button
        android:id="@+id/button3"
        android:layout_width="358dp"
        android:layout_height="67dp"
        android:layout_marginTop="144dp"
        android:fontFamily="monospace"
        android:onClick="Registrar"
        android:text="@string/Boton"
        android:theme="@style/CCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3" />


</androidx.constraintlayout.widget.ConstraintLayout>